--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
       rel="stylesheet">
 </head>
 <body>
+  <form name=”contact” netlify netlify-honeypot=”bot-field” hidden>
+    <input type=”text” name=”name” />
+    <input type=”email” name=”email” />
+    <select name=”subject”></select>
+    <textarea name=”message”></textarea>
+  </form>
+
   <app-root></app-root>
 </body>
 </html>
